--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "grunt-sftp-deploy": "^0.2.4",
     "grunt-webpack": "^1.0.11",
     "node-sass": "^3.2.0",
-    "react": "^0.13.1",
-    "reflux": "^0.2.7",
+    "redux-devtools": "^2.1.5",
     "sass-loader": "^2.0.0",
     "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "dotenv": "^1.2.0"
+    "dotenv": "^1.2.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^3.1.0",
+    "redux": "^3.0.2"
   }
 }
