--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^3.1.0",
-    "redux": "^3.0.2"
+    "redux": "^3.0.2",
+    "velocity-react": "^1.1.0"
   }
 }
