--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^0.14.0",
     "react-redux": "^3.1.0",
     "redux": "^3.0.2",
+    "velocity-animate": "^1.2.3",
     "velocity-react": "^1.1.0"
   }
 }
